wip network data

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -26,5 +26,5 @@ dockerfile:
   enabled: true
 
 verbatim: |
-  tilt: FORCE
+  tilt: FORCE generate
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE)
