--- a/deployments/argora.yaml
+++ b/deployments/argora.yaml
@@ -1,3 +1,23 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: argora
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: argora
+  namespace: default
+subjects:
+  - kind: ServiceAccount
+    name: argora
+    namespace: default
+roleRef:
+    kind: ClusterRole
+    name: argora
+    apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,6 +35,10 @@ spec:
       labels:
         app: argora
     spec:
+      serviceAccountName: argora
       containers:
         - name: argora
           image: argora-dev:latest
+          envFrom:
+            - secretRef:
+                name: argora
