--- a/deployments/test/cluster.yaml
+++ b/deployments/test/cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
-  name: qa-de-1a-ceph
+  name: st1-qa-de-1
   namespace: default
   labels:
     discovery.inf.sap.cloud/clusterRole: "cc-ceph"
