--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -3,6 +3,9 @@
 # Edit Makefile.maker.yaml instead.                                            #
 ################################################################################
 
+# Copyright 2024 SAP SE
+# SPDX-License-Identifier: Apache-2.0
+
 run:
   timeout: 3m # 1m by default
   modules-download-mode: readonly
@@ -26,17 +29,18 @@ issues:
   max-same-issues: 0
 
 linters-settings:
-  copyloopvar:
-    ignore-alias: true
   dupl:
     # Tokens count to trigger issue, 150 by default.
     threshold: 100
   errcheck:
     # Report about assignment of errors to blank identifier.
     check-blank: true
-    # Report about not checking of errors in type assertions.
-    check-type-assertions: true
+    # Do not report about not checking of errors in type assertions.
+    # This is not as dangerous as skipping error values because an unchecked type assertion just immediately panics.
+    # We disable this because it makes a ton of useless noise esp. in test code.
+    check-type-assertions: false
   forbidigo:
+    analyze-types: true # required for pkg:
     forbid:
       # ioutil package has been deprecated: https://github.com/golang/go/issues/42026
       - ^ioutil\..*$
@@ -44,6 +48,14 @@ linters-settings:
       # Applications wishing to use http.ServeMux should obtain local instances through http.NewServeMux() instead of using the global default instance.
       - ^http\.DefaultServeMux$
       - ^http\.Handle(?:Func)?$
+      # Forbid usage of old and archived square/go-jose
+      - pkg: ^gopkg\.in/square/go-jose\.v2$
+        msg: "gopk.in/square/go-jose is archived and has CVEs. Replace it with gopkg.in/go-jose/go-jose.v2"
+      - pkg: ^github.com/coreos/go-oidc$
+        msg: "github.com/coreos/go-oidc depends on gopkg.in/square/go-jose which has CVEs. Replace it with github.com/coreos/go-oidc/v3"
+
+      - pkg: ^github.com/howeyc/gopass$
+        msg: "github.com/howeyc/gopass is archived, use golang.org/x/term instead"
   goconst:
     ignore-tests: true
     min-occurrences: 5
@@ -75,6 +87,12 @@ linters-settings:
   goimports:
     # Put local imports after 3rd-party packages.
     local-prefixes: github.com/sapcc/argora
+  gomoddirectives:
+    go-version-pattern: '1\.\d+(\.0)?$'
+    replace-allow-list:
+      # for go-pmtud
+      - github.com/mdlayher/arp
+    toolchain-forbidden: true
   gosec:
     excludes:
       # gosec wants us to set a short ReadHeaderTimeout to avoid Slowloris attacks, but doing so would expose us to Keep-Alive race conditions (see https://iximiuz.com/en/posts/reverse-proxy-http-keep-alive-and-502s/)
@@ -97,13 +115,14 @@ linters-settings:
     default-rpc-path: true
     http-method: true
     http-status-code: true
-    os-dev-null: true
     sql-isolation-level: true
-    syslog-priority: true
-    time-weekday: true
-    time-month: true
     time-layout: true
+    time-month: true
+    time-weekday: true
     tls-signature-scheme: true
+  usetesting:
+    os-setenv: true
+    os-temp-dir: true
   whitespace:
     # Enforce newlines (or comments) after multi-line function signatures.
     multi-func: true
@@ -122,6 +141,7 @@ linters:
     - errcheck
     - errname
     - errorlint
+    - exptostd
     - forbidigo
     - ginkgolinter
     - gocheckcompilerdirectives
@@ -129,6 +149,7 @@ linters:
     - gocritic
     - gofmt
     - goimports
+    - gomoddirectives
     - gosec
     - gosimple
     - govet
@@ -151,4 +172,5 @@ linters:
     - unparam
     - unused
     - usestdlibvars
+    - usetesting
     - whitespace
