Add controller for `ironcore-metal`

--- a/deployments/argora.yaml
+++ b/deployments/argora.yaml
@@ -39,6 +39,9 @@ spec:
       containers:
         - name: argora
           image: argora-dev:latest
+          args:
+            - --controllers="metal3Controller"
+          #  - --controllers="ironCoreServerController"
           envFrom:
             - secretRef:
                 name: argora
