--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -13,8 +13,8 @@ labels:
   - includeSelectors: false
     includeTemplates: true
     pairs:
-      app.kubernetes.io/component: argora
-      app.kubernetes.io/created-by: argora-operator
+      app.kubernetes.io/name: argora
+      app.kubernetes.io/component: argora-operator
       app.kubernetes.io/part-of: argora-operator
       app.kubernetes.io/managed-by: kustomize
 
@@ -22,6 +22,8 @@ resources:
 - ../crd
 - ../rbac
 - ../manager
+- ../configmap
+- ../secret
 # [METRICS] Expose the controller manager metrics service.
 - metrics_service.yaml
 
@@ -30,5 +32,13 @@ patches:
 # [METRICS] The following patch will enable the metrics endpoint using HTTPS and the port :8443.
 # More info: https://book.kubebuilder.io/reference/metrics
 - path: manager_metrics_patch.yaml
+  target:
+    kind: Deployment
+# Mount the configmap to the controller manager
+- path: configmap_mount_patch.yaml
+  target:
+    kind: Deployment
+# Mount the secret to the controller manager
+- path: secret_mount_patch.yaml
   target:
     kind: Deployment
