--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -192,7 +192,11 @@ verbatim: |
 
   .PHONY: kb-gen-manifest
   kb-gen-manifest: kb-kustomize
-    $(KUSTOMIZE) build config/default > argora-manifest.yaml
+    $(KUSTOMIZE) build config/default > templates/argora-manifest.yaml
+
+  .PHONY: kb-gen-helm
+  kb-gen-helm: helm kb-gen-manifest
+    helm template . -s templates/argora-manifest.yaml -f helm-values.yaml > argora-deployment.yaml
 
   .PHONY: kb-install
   kb-install: kb-manifests kb-kustomize ## Install CRDs into the K8s cluster specified in ~/.kube/config.
@@ -224,6 +228,7 @@ verbatim: |
   CONTROLLER_GEN ?= $(LOCALBIN)/controller-gen
   ENVTEST ?= $(LOCALBIN)/setup-envtest
   GOLANGCI_LINT = $(LOCALBIN)/golangci-lint
+  HELM ?= $(LOCALBIN)/helm
 
   ## Tool Versions
   KUSTOMIZE_VERSION ?= v5.5.0
@@ -233,6 +238,7 @@ verbatim: |
   #ENVTEST_K8S_VERSION is the version of Kubernetes to use for setting up ENVTEST binaries (i.e. 1.31)
   ENVTEST_K8S_VERSION ?= $(shell go list -m -f "{{ .Version }}" k8s.io/api | awk -F'[v.]' '{printf "1.%d", $$3}')
   GOLANGCI_LINT_VERSION ?= v1.63.4
+  HELM_VERSION ?= v3.17.0
 
   .PHONY: kb-kustomize
   kb-kustomize: $(KUSTOMIZE) ## Download kustomize locally if necessary.
@@ -261,6 +267,11 @@ verbatim: |
   kb-golangci-lint: $(GOLANGCI_LINT) ## Download golangci-lint locally if necessary.
   $(GOLANGCI_LINT): $(LOCALBIN)
     $(call go-install-tool,$(GOLANGCI_LINT),github.com/golangci/golangci-lint/cmd/golangci-lint,$(GOLANGCI_LINT_VERSION))
+
+  .PHONY: helm
+  helm: $(HELM)
+  $(HELM): $(LOCALBIN)
+    $(call go-install-tool,$(HELM),helm.sh/helm/v3/cmd/helm,$(HELM_VERSION))
 
   # go-install-tool will 'go install' any package with custom target and name of binary, if it doesn't exist
   # $1 - target path with name of binary
