--- a/config/configmap/configmap.yaml
+++ b/config/configmap/configmap.yaml
@@ -6,8 +6,6 @@ data:
   config.json: |
     {
       ironCoreRoles: "{{ .Values.ironcore_roles }}",
-      ironCoreRegion: "{{ .Values.ironcore.region | b64enc }}",
-      ironCoreClusterTypes: "{{ .Values.ironcore.clusterTypes | b64enc }}",
-      serverController: "{{ .Values.controllers }}",
-      k8sServiceHost: "{{ .Values.env.kubernetesServiceHost | b64enc }}"
+      ironCoreRegion: "{{ .Values.ironcore_region }}",
+      serverController: "{{ .Values.controller }}",
     }
