--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -196,7 +196,7 @@ verbatim: |
     helm template . -s templates/install.yaml -f helm-values.yaml > dist/install.yaml
 
   .PHONY: helm-deploy
-  helm-install: helm build-installer
+  helm-deploy: helm build-installer
     helm template . -s templates/install.yaml -f helm-values.yaml | $(KUBECTL) apply -f -
 
   .PHONY: install-crd
