--- a/config/secret/secret.yaml
+++ b/config/secret/secret.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secret
-data:
-  credentials.json: |
+type: Opaque
+stringData:
+  credentials.json: |-
     {
       "netboxUrl": "{{ .Values.netbox.url | b64enc }}",
-      "netboxToken": {{ .Values.netbox.token | b64enc }},
+      "netboxToken": "{{ .Values.netbox.token | b64enc }}",
       "bmcUser": "{{ .Values.bmc.username | b64enc }}",
       "bmcPassword": "{{ .Values.bmc.password | b64enc }}"
     }
