--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -189,8 +189,8 @@ verbatim: |
 
   .PHONY: helm-prepare
   helm-prepare:
-    yq e -i ".image.repository = \"${IMG_REPO}\"" helm-values.yaml
-    yq e -i ".image.tag = \"${IMG_TAG}\"" helm-values.yaml
+    yq -i '.image.repository = "$(IMG_REPO)"' helm-values.yaml
+    yq -i '.image.tag = "$(IMG_TAG)"' helm-values.yaml
 
   .PHONY: helm-lint
   helm-lint: helm helm-prepare build-installer
