--- a/config/samples/argora_v1alpha1_update.yaml
+++ b/config/samples/argora_v1alpha1_update.yaml
@@ -7,7 +7,7 @@ metadata:
   name: update-sample
   namespace: argora-system
 spec:
-  clusterSelection:
+  clusters:
   - name:
     region: qa-de-1
     type: cc-kvm-compute
