--- a/config/secret/secret.yaml
+++ b/config/secret/secret.yaml
@@ -6,7 +6,7 @@ type: Opaque
 stringData:
   credentials.json: |-
     {
-      "netboxUrl": "{{ .Values.netbox.url | b64enc }}",
+      "netboxURL": "{{ .Values.netbox.url | b64enc }}",
       "netboxToken": "{{ .Values.netbox.token | b64enc }}",
       "bmcUser": "{{ .Values.bmc.username | b64enc }}",
       "bmcPassword": "{{ .Values.bmc.password | b64enc }}"
