--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,7 +10,8 @@
     "defo89",
     "SchwarzM",
     "xsen84",
-    "goerangudat"
+    "goerangudat",
+    "videlov"
   ],
   "commitMessageAction": "Renovate: Update",
   "constraints": {
