--- a/config/configmap/configmap.yaml
+++ b/config/configmap/configmap.yaml
@@ -3,9 +3,4 @@ kind: ConfigMap
 metadata:
   name: config
 data:
-  config.json: |-
-    {
-      "ironCoreRoles": "{{ .Values.ironcore_roles }}",
-      "ironCoreRegion": "{{ .Values.ironcore_region }}",
-      "serverController": "{{ .Values.controller }}"
-    }
+  config.json: "{{- .Values.configJson | nindent 2 }}"
