--- a/config/secret/secret.yaml
+++ b/config/secret/secret.yaml
@@ -4,10 +4,4 @@ metadata:
   name: secret
 type: Opaque
 stringData:
-  credentials.json: |-
-    {
-      "netboxURL": "{{ .Values.netbox.url | b64enc }}",
-      "netboxToken": "{{ .Values.netbox.token | b64enc }}",
-      "bmcUser": "{{ .Values.bmc.username | b64enc }}",
-      "bmcPassword": "{{ .Values.bmc.password | b64enc }}"
-    }
+  credentials.json: "{{- .Values.credentialsJson | nindent 2 }}"
