Update configmap and secret strucutre and helm templating

--- a/config/secret/secret.yaml
+++ b/config/secret/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: secret
 type: Opaque
 stringData:
-  credentials.json: "{{- .Values.credentialsJson | nindent 2 }}"
+  credentials.json: "{{ toJson .Values.credentials}}"
