--- a/config/configmap/configmap.yaml
+++ b/config/configmap/configmap.yaml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: config
 data:
-  config.json: "{{- .Values.configJson | nindent 2 }}"
+  config.json: "{{ toJson .Values.config }}"
