--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -17,6 +17,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
   - argora.cloud.sap
   resources:
   - updates
