--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -43,6 +43,7 @@ spec:
         args:
           - --leader-elect
           - --health-probe-bind-address=:8081
+          #- --zap-log-level=debug
         image: controller:latest #"{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: manager
         ports: []
