--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -3,7 +3,7 @@
 # Edit Makefile.maker.yaml instead.                                            #
 ################################################################################
 
-# SPDX-FileCopyrightText: 2024 SAP SE
+# Copyright 2024 SAP SE
 # SPDX-License-Identifier: Apache-2.0
 
 name: Checks
@@ -29,9 +29,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           check-latest: true
-          go-version: 1.24.3
+          go-version: 1.24.2
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v8
+        uses: golangci/golangci-lint-action@v7
         with:
           version: latest
       - name: Dependency Licenses Review
@@ -50,5 +50,3 @@ jobs:
           reporter: github-check
       - name: Check if source code files have license header
         run: make check-license-headers
-      - name: REUSE Compliance Check
-        uses: fsfe/reuse-action@v5
