--- a/config/crd/bases/argora.cloud.sap_updates.yaml
+++ b/config/crd/bases/argora.cloud.sap_updates.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 SAP SE
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
