--- a/config/samples/argora_v1alpha1_update.yaml
+++ b/config/samples/argora_v1alpha1_update.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 SAP SE
+#
+# SPDX-License-Identifier: Apache-2.0
+
 apiVersion: argora.cloud.sap/v1alpha1
 kind: Update
 metadata:
