--- a/hack/crd/metal3.io_baremetalhosts.yaml
+++ b/hack/crd/metal3.io_baremetalhosts.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 SAP SE
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
