--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,6 +1,5 @@
 # SPDX-FileCopyrightText: SAP SE
 # SPDX-License-Identifier: Apache-2.0
-
 version = 1
 SPDX-PackageName = "argora"
 SPDX-PackageDownloadLocation = "https://github.com/sapcc/argora"
@@ -15,6 +14,27 @@ path = [
   "go.mod",
   "go.sum",
   "Makefile.maker.yaml",
+  "vendor/modules.txt",
+]
+SPDX-FileCopyrightText = "SAP SE"
+SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
+path = [
+  ".github/**",
+  ".gitignore",
+  ".dockerignore",
+  ".golangci.yml",
+  ".license-scan-overrides.jsonl",
+  ".license-scan-rules.json",
+  "Makefile",
+  "PROJECT",
+  "go.mod",
+  "go.sum",
+  "config/**",
+  "dist/**",
+  "docs/**",
+  "hack/**",
 ]
 SPDX-FileCopyrightText = "SAP SE"
 SPDX-License-Identifier = "Apache-2.0"
